<resources>
    <string name="app_name">Registro</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Acceso</string>
    <string name="login_cancel_button">Cancelar</string>
    <string name="login_error_message">Error</string>
    <string name="search_title">Buscar</string>
    <string name="filter_title">Titulo</string>
</resources>